--- a/index.html
+++ b/index.html
@@ -74,5 +74,9 @@
 
             </div>
         </div>
+        
+        <div style="background-color:white;background-image:url(rehex2.png);border:1px solid black; width:300px;height:300px;font-size:18px; background-size: 30%">HTML background repeat example</div>
+
+
     </body>
 </html>
